# parallel-netcdf

./: .travis.yml  DEVELOPER_NOTES  INSTALL  Makefile.am  acinclude.m4  configure.ac  sneak_peek
benchmarks/: Makefile.am
benchmarks/C/: Makefile.am  aggregation.c  write_block_read_column.c
benchmarks/FLASH-IO/: Makefile.am
doc/: Makefile.am  README.CRAY  README.IBM  README.K-Computer  README.Ubuntu
examples/: Makefile.am
examples/C/: Makefile.am  block_cyclic.c  bput_varn_int64.c  bput_varn_uint.c  collective_write.c  column_wise.c  create_open.c  fill_mode.c  flexible_api.c  get_info.c  get_vara.c  ghost_cell.c  global_attributes.c  hints.c  i_varn_int64.c  mput.c  nonblocking_write.c  nonblocking_write_in_def.c  put_vara.c  put_varn_float.c  put_varn_int.c  req_all.c  transpose.c  vard_int.c
examples/CXX/: Makefile.am  SimpleXyWr.cpp  block_cyclic.cpp  collective_write.cpp  column_wise.cpp  fill_mode.cpp  flexible_api.cpp  get_info.cpp  get_vara.cpp  hints.cpp  nonblocking_write.cpp  put_vara.cpp  put_varn_float.cpp  put_varn_int.cpp  transpose.cpp  vard_int.cpp
examples/F77/: Makefile.am  fill_mode.f
examples/F90/: Makefile.am
examples/tutorial/: Makefile.am
m4/: libtool.m4  utils.m4
man/: Makefile.am
src/: Makefile.am
src/binding/: Makefile.am
src/binding/cxx/: Makefile.am
src/binding/f77/: Makefile.am  mpinetcdf_impl.h  pnetcdf.inc.in
src/binding/f90/: Makefile.am  file.fh  getput_text.m4  getput_var.m4  nf90_constants.fh  nfmpi_constants.fh.in  visibility.fh
src/dispatchers/: Makefile.am  attr_getput.m4  attribute.c  dimension.c  error_codes.c  file.c  var_getput.m4  variable.c
src/drivers/: DEVELOPER.README  Makefile.am
src/drivers/common/: Makefile.am  convert_swap.m4  create_imaptype.c  dtype_decode.c  mem_alloc.c  pack_unpack.c  utils.c
src/drivers/foo/: Makefile.am  foo_attr.c  foo_dim.c  foo_driver.c  foo_driver.h  foo_file.c  foo_var.c
src/drivers/include/: Makefile.am  common.h
src/drivers/mpio/: Makefile.am  dim.c  error.c  mpio_dispatch.c  mpio_dispatch.h  ncmpidtype.c
src/drivers/ncfoo/: Makefile.am  ncfoo_attr.c  ncfoo_dim.c  ncfoo_driver.h  ncfoo_file.c  ncfoo_var.c
src/drivers/ncmpi/: Makefile.am  attr.m4  bput.c  convert_swap.m4  dim.c  error.c  filetype.c  fill.c  getput.m4  hash_func.c  header.c  i_getput.m4  i_varn.m4  m_getput_varx.m4  macro.h  malloc.c  mpincio.c  mpinetcdf.c  nc.c  nc.h  ncio.h  ncmpi_dispatch.c  ncmpi_dispatch.h  ncmpidtype.c  ncmpidtype.h  ncx.m4  ncx_h.m4  nonblocking.c  rnd.h  string.c  subfile.c  subfile.h  swap.c  utf8proc.c  utf8proc.h  util.c  var.c  vard.c  varn.m4  varnx.m4
src/drivers/ncmpio/: Makefile.am  attr.m4  bput.c  convert_swap.m4  dim.c  error.c  filetype.c  fill.c  getput.m4  hash_func.c  header.c  i_getput.m4  i_varn.m4  legacy_codes.c  m_getput_varx.m4  macro.h  nc.c  nc.h  ncio.h  ncmpidtype.c  ncmpio_attr.m4  ncmpio_bput.c  ncmpio_close.c  ncmpio_create.c  ncmpio_dim.c  ncmpio_dispatch.c  ncmpio_dispatch.h  ncmpio_driver.c  ncmpio_driver.h  ncmpio_enddef.c  ncmpio_file.c  ncmpio_file_misc.c  ncmpio_filetype.c  ncmpio_fill.c  ncmpio_getput.m4  ncmpio_hash_func.c  ncmpio_header_get.c  ncmpio_header_put.c  ncmpio_i_getput.m4  ncmpio_i_varn.m4  (+17 more)
src/drivers/ncmpio/Legacy/: misc.c
src/include/: Makefile.am  dispatch.h  nctypes.h  pnc_debug.h  pnetcdf.h.in
src/libs/: Makefile.am
src/utils/: Makefile.am  pnetcdf-config.in
src/utils/ncmpidiff/: Makefile.am  ncmpidiff.1  ncmpidiff.c
src/utils/ncmpidump/: Makefile.am  ncmpidump.c  vardata.c
src/utils/ncmpigen/: Makefile.am  main.c
src/utils/ncmpivalid/: Makefile.am  ncmpivalid.1  ncmpivalid.c
src/utils/ncoffsets/: Makefile.am  ncoffsets.c
src/utils/pnetcdf_version/: Makefile.am  pnetcdf_version.c
test/: Makefile.am
test/C/: Makefile.am  pres_temp_4D_rd.c  pres_temp_4D_wr.c
test/CXX/: Makefile.am  nctst.cpp  test_classic.cpp
test/F90/: Makefile.am
test/cdf_format/: Makefile.am  cdf_type.c  dim_cdf12.c  test_inq_format.c
test/common/: Makefile.am  testutils.h
test/fandc/: Makefile.am  csnap.c  pnctest.c
test/header/: Makefile.am  header_consistency.c  test_check_header.c  test_check_header1.c
test/largefile/: Makefile.am  large_var.c
test/nc_test/: Makefile.am  test_write.m4  tests.h.m4  util.c
test/nf90_test/: Makefile.am
test/nf_test/: Makefile.am
test/nonblocking/: Makefile.am  bput_varn.m4  column_wise.m4  flexible_bput.c  i_varn_indef.c  i_varn_int64.c  interleaved.c  mcoll_perf.c  req_all.c  test_bput.c  wait_after_indep.c
test/subfile/: Makefile.am  test_subfile.c
test/test_double_int/: Makefile.am
test/testcases/: Makefile.am  add_var.c  alignment_test.c  buftype_free.c  check_striping.c  check_type.c  collective_error.c  erange_fill.m4  flexible.c  flexible2.c  flexible_varm.c  inq_num_vars.c  inq_recsize.c  ivarn.c  last_large_var.c  mix_collectives.c  modes.c  nc_null_args.c  ncmpi_vars_null_stride.c  noclobber.c  nonblocking.c  null_args.c  one_record.c  profile.c  record.c  redef1.c  scalar.c  test_erange.c  test_vard.c  test_varm.c  tst_dimsizes.c  varn_contig.c  varn_int.c  vectors.c
